--- a/Deep Learning/Some test.ipynb
+++ b/Deep Learning/Some test.ipynb
@@ -3,17 +3,27 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f90d1bc2",
+   "id": "789613ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import math\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "924550d8",
+   "metadata": {},
+   "source": [
+    "# Matrix with vector multiplication"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2fbf126b",
+   "id": "d985f5b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +34,10 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "360de9ff",
-   "metadata": {},
+   "id": "666c707e",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -46,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "369f3b82",
+   "id": "9f5ba409",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0e933dd2",
+   "id": "b425ff4a",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e0819b7c",
+   "id": "a856bc51",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "827831d0",
+   "id": "c5a04e8d",
    "metadata": {},
    "outputs": [
     {
@@ -131,9 +143,815 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "33632cd4",
+   "metadata": {},
+   "source": [
+    "# Exponential operation of vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fd66b128",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros((3,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "16ad72b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = np.array([1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "959053d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "only size-1 arrays can be converted to Python scalars",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\BINH_H~1\\AppData\\Local\\Temp/ipykernel_4768/2343473701.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: only size-1 arrays can be converted to Python scalars"
+     ]
+    }
+   ],
+   "source": [
+    "math.exp(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7441353b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.38905609893065"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.exp(v[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "fb511d5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2.71828183,  7.3890561 , 20.08553692])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.exp(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "90a73c8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2., 4., 8.])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.exp(v*np.log(2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94c90920",
+   "metadata": {},
+   "source": [
+    "# Maximum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8f2362d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 0])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.maximum([1,2,-3], 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02757265",
+   "metadata": {},
+   "source": [
+    "# Broadcasting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "40a41759",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4],\n",
+       "       [ 0,  2,  4,  6],\n",
+       "       [ 3,  6,  9, 12],\n",
+       "       [ 4,  5,  6,  7]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([[1,2,3,4],[0,2,4,6],[3,6,9,12],[4,5,6,7]])\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "a9f56439",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8, 15, 22, 29])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cal = A.sum(axis=0)\n",
+    "cal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "6bd8076f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0  1  2   3\n",
+       "0  1  2  3   4\n",
+       "1  0  2  4   6\n",
+       "2  3  6  9  12\n",
+       "3  4  5  6   7"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# compare to pandas\n",
+    "dfA = pd.DataFrame(A)\n",
+    "dfA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "a3872791",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     8\n",
+       "1    15\n",
+       "2    22\n",
+       "3    29\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfA.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a576c8ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     8\n",
+       "1    15\n",
+       "2    22\n",
+       "3    29\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfA.sum(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "6583fc77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    10\n",
+       "1    12\n",
+       "2    30\n",
+       "3    22\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfA.sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a4a8ae7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.125     , 0.13333333, 0.13636364, 0.13793103],\n",
+       "       [0.        , 0.13333333, 0.18181818, 0.20689655],\n",
+       "       [0.375     , 0.4       , 0.40909091, 0.4137931 ],\n",
+       "       [0.5       , 0.33333333, 0.27272727, 0.24137931]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A/cal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "9cf56cb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4],\n",
+       "       [ 0,  2,  4,  6],\n",
+       "       [ 3,  6,  9, 12],\n",
+       "       [ 4,  5,  6,  7]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "fad292b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.5, 1. , 1.5, 2. ],\n",
+       "       [0. , 1. , 2. , 3. ],\n",
+       "       [1.5, 3. , 4.5, 6. ],\n",
+       "       [2. , 2.5, 3. , 3.5]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "676c272a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.38824607,  1.290012  ,  0.42255911, -0.11620041,  0.00217573,\n",
+       "       -0.18877197, -1.03462757, -0.00616969])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.rand(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "87eca8c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3,)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3])\n",
+    "a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b68c3ad6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.718281828459045"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.exp(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e998d5d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3, 4],\n",
+       "       [2, 4, 6, 8]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.array([[1,2,3,4],[2,4,6,8]])\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "02b73fbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3,  6,  9, 12])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(x,axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4e85b8ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "42ccc36c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 20])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(x,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e8c842e",
+   "metadata": {},
+   "source": [
+    "# Reshape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4ec45efb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "       17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(30)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ec7f8dd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3,  4,  5],\n",
+       "       [ 6,  7,  8,  9, 10, 11],\n",
+       "       [12, 13, 14, 15, 16, 17],\n",
+       "       [18, 19, 20, 21, 22, 23],\n",
+       "       [24, 25, 26, 27, 28, 29]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.reshape(5,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "fd4f0b69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0,  1,  2,  3,  4],\n",
+       "        [ 5,  6,  7,  8,  9],\n",
+       "        [10, 11, 12, 13, 14]],\n",
+       "\n",
+       "       [[15, 16, 17, 18, 19],\n",
+       "        [20, 21, 22, 23, 24],\n",
+       "        [25, 26, 27, 28, 29]]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.reshape(2,3,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "32e37f5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[  0,   1,   2,   3,   4],\n",
+       "         [  5,   6,   7,   8,   9],\n",
+       "         [ 10,  11,  12,  13,  14],\n",
+       "         [ 15,  16,  17,  18,  19]],\n",
+       "\n",
+       "        [[ 20,  21,  22,  23,  24],\n",
+       "         [ 25,  26,  27,  28,  29],\n",
+       "         [ 30,  31,  32,  33,  34],\n",
+       "         [ 35,  36,  37,  38,  39]],\n",
+       "\n",
+       "        [[ 40,  41,  42,  43,  44],\n",
+       "         [ 45,  46,  47,  48,  49],\n",
+       "         [ 50,  51,  52,  53,  54],\n",
+       "         [ 55,  56,  57,  58,  59]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 60,  61,  62,  63,  64],\n",
+       "         [ 65,  66,  67,  68,  69],\n",
+       "         [ 70,  71,  72,  73,  74],\n",
+       "         [ 75,  76,  77,  78,  79]],\n",
+       "\n",
+       "        [[ 80,  81,  82,  83,  84],\n",
+       "         [ 85,  86,  87,  88,  89],\n",
+       "         [ 90,  91,  92,  93,  94],\n",
+       "         [ 95,  96,  97,  98,  99]],\n",
+       "\n",
+       "        [[100, 101, 102, 103, 104],\n",
+       "         [105, 106, 107, 108, 109],\n",
+       "         [110, 111, 112, 113, 114],\n",
+       "         [115, 116, 117, 118, 119]]]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = np.arange(120).reshape(2,3,4,5)\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "70a9be7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0,  1,  2,  3,  4],\n",
+       "        [ 5,  6,  7,  8,  9],\n",
+       "        [10, 11, 12, 13, 14],\n",
+       "        [15, 16, 17, 18, 19]],\n",
+       "\n",
+       "       [[20, 21, 22, 23, 24],\n",
+       "        [25, 26, 27, 28, 29],\n",
+       "        [30, 31, 32, 33, 34],\n",
+       "        [35, 36, 37, 38, 39]],\n",
+       "\n",
+       "       [[40, 41, 42, 43, 44],\n",
+       "        [45, 46, 47, 48, 49],\n",
+       "        [50, 51, 52, 53, 54],\n",
+       "        [55, 56, 57, 58, 59]]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "768c1e3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "       17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b1efdf5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1,   0,  -1,  -2,  -3,  -4,  -5,  -6,  -7,  -8,  -9, -10, -11,\n",
+       "       -12, -13, -14, -15, -16, -17, -18, -19, -20, -21, -22, -23, -24,\n",
+       "       -25, -26, -27, -28])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1-a"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c9b5f21",
+   "id": "80aceeb9",
    "metadata": {},
    "outputs": [],
    "source": []
