--- a/Python/my_numpy.ipynb
+++ b/Python/my_numpy.ipynb
@@ -2517,7 +2517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2526,7 +2526,7 @@
        "array([1, 5, 3, 2, 7, 6])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2540,7 +2540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2549,7 +2549,7 @@
        "array([False,  True, False, False,  True,  True])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2560,7 +2560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2569,7 +2569,7 @@
        "array([5, 7, 6])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2580,22 +2580,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 0, 1, 1, 0, 0])"
+       "array([0, 1, 0, 0, 1, 1])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.where(x>3,0,1)"
+    "np.where(x>3,1,0\n",
+    "        )"
    ]
   },
   {
