--- a/Python/my_pandas.ipynb
+++ b/Python/my_pandas.ipynb
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -1437,24 +1437,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>a</th>\n",
-       "      <td>2.706850</td>\n",
-       "      <td>0.628133</td>\n",
-       "      <td>0.907969</td>\n",
-       "      <td>0.503826</td>\n",
+       "      <td>-1.269640</td>\n",
+       "      <td>0.063923</td>\n",
+       "      <td>0.141859</td>\n",
+       "      <td>1.120527</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>b</th>\n",
-       "      <td>0.651118</td>\n",
-       "      <td>-0.319318</td>\n",
-       "      <td>-0.848077</td>\n",
-       "      <td>0.605965</td>\n",
+       "      <td>-0.798295</td>\n",
+       "      <td>-0.498797</td>\n",
+       "      <td>1.393478</td>\n",
+       "      <td>0.421979</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>c</th>\n",
-       "      <td>-2.018168</td>\n",
-       "      <td>0.740122</td>\n",
-       "      <td>0.528813</td>\n",
-       "      <td>-0.589001</td>\n",
+       "      <td>-0.500079</td>\n",
+       "      <td>-1.332776</td>\n",
+       "      <td>1.411536</td>\n",
+       "      <td>-0.325615</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1462,12 +1462,12 @@
       ],
       "text/plain": [
        "          x         y         z         t\n",
-       "a  2.706850  0.628133  0.907969  0.503826\n",
-       "b  0.651118 -0.319318 -0.848077  0.605965\n",
-       "c -2.018168  0.740122  0.528813 -0.589001"
+       "a -1.269640  0.063923  0.141859  1.120527\n",
+       "b -0.798295 -0.498797  1.393478  0.421979\n",
+       "c -0.500079 -1.332776  1.411536 -0.325615"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1636,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1669,24 +1669,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>a</th>\n",
-       "      <td>2.706850</td>\n",
-       "      <td>0.628133</td>\n",
-       "      <td>0.907969</td>\n",
-       "      <td>0.503826</td>\n",
+       "      <td>-1.269640</td>\n",
+       "      <td>0.063923</td>\n",
+       "      <td>0.141859</td>\n",
+       "      <td>1.120527</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>b</th>\n",
-       "      <td>0.651118</td>\n",
-       "      <td>-0.319318</td>\n",
-       "      <td>-0.848077</td>\n",
-       "      <td>0.605965</td>\n",
+       "      <td>-0.798295</td>\n",
+       "      <td>-0.498797</td>\n",
+       "      <td>1.393478</td>\n",
+       "      <td>0.421979</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>c</th>\n",
-       "      <td>-2.018168</td>\n",
-       "      <td>0.740122</td>\n",
-       "      <td>0.528813</td>\n",
-       "      <td>-0.589001</td>\n",
+       "      <td>-0.500079</td>\n",
+       "      <td>-1.332776</td>\n",
+       "      <td>1.411536</td>\n",
+       "      <td>-0.325615</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1694,12 +1694,12 @@
       ],
       "text/plain": [
        "          x         y         z         t\n",
-       "a  2.706850  0.628133  0.907969  0.503826\n",
-       "b  0.651118 -0.319318 -0.848077  0.605965\n",
-       "c -2.018168  0.740122  0.528813 -0.589001"
+       "a -1.269640  0.063923  0.141859  1.120527\n",
+       "b -0.798295 -0.498797  1.393478  0.421979\n",
+       "c -0.500079 -1.332776  1.411536 -0.325615"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1710,19 +1710,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "a    2.706850\n",
-       "b    0.651118\n",
-       "c   -2.018168\n",
+       "a   -1.269640\n",
+       "b   -0.798295\n",
+       "c   -0.500079\n",
        "Name: x, dtype: float64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1734,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1765,18 +1765,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>a</th>\n",
-       "      <td>2.706850</td>\n",
-       "      <td>0.628133</td>\n",
+       "      <td>-1.269640</td>\n",
+       "      <td>0.063923</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>b</th>\n",
-       "      <td>0.651118</td>\n",
-       "      <td>-0.319318</td>\n",
+       "      <td>-0.798295</td>\n",
+       "      <td>-0.498797</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>c</th>\n",
-       "      <td>-2.018168</td>\n",
-       "      <td>0.740122</td>\n",
+       "      <td>-0.500079</td>\n",
+       "      <td>-1.332776</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1784,12 +1784,12 @@
       ],
       "text/plain": [
        "          x         y\n",
-       "a  2.706850  0.628133\n",
-       "b  0.651118 -0.319318\n",
-       "c -2.018168  0.740122"
+       "a -1.269640  0.063923\n",
+       "b -0.798295 -0.498797\n",
+       "c -0.500079 -1.332776"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1801,20 +1801,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "x    0.651118\n",
-       "y   -0.319318\n",
-       "z   -0.848077\n",
-       "t    0.605965\n",
+       "x   -0.798295\n",
+       "y   -0.498797\n",
+       "z    1.393478\n",
+       "t    0.421979\n",
        "Name: b, dtype: float64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1826,16 +1826,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "      <th>t</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>-0.798295</td>\n",
+       "      <td>-0.498797</td>\n",
+       "      <td>1.393478</td>\n",
+       "      <td>0.421979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>-0.500079</td>\n",
+       "      <td>-1.332776</td>\n",
+       "      <td>1.411536</td>\n",
+       "      <td>-0.325615</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          x         y         z         t\n",
+       "b -0.798295 -0.498797  1.393478  0.421979\n",
+       "c -0.500079 -1.332776  1.411536 -0.325615"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# very special way, select some rows successsively!!!!\n",
+    "df[1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "      <th>t</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>-0.798295</td>\n",
+       "      <td>-0.498797</td>\n",
+       "      <td>1.393478</td>\n",
+       "      <td>0.421979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>-0.500079</td>\n",
+       "      <td>-1.332776</td>\n",
+       "      <td>1.411536</td>\n",
+       "      <td>-0.325615</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          x         y         z         t\n",
+       "b -0.798295 -0.498797  1.393478  0.421979\n",
+       "c -0.500079 -1.332776  1.411536 -0.325615"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# other ways to select some rows successsively\n",
+    "df.loc[['b','c'],:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.8480769834036315"
+       "1.393478220591484"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
