--- a/Python/functions and classes.ipynb
+++ b/Python/functions and classes.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8ac2c4cc",
+   "id": "6934332c",
    "metadata": {},
    "source": [
-    "# 1. Functions"
+    "# 1. Functions\n",
+    "- function `f(x)` then `x` is called a parameter, just like variable. A concrete value is called an argument."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "63db781a",
+   "id": "491decaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ce4e3dc5",
+   "id": "356f5dda",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d604e48d",
+   "id": "e415acbc",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eae1d318",
+   "id": "934e5e40",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d52f2313",
+   "id": "fd618d44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1e187dc2",
+   "id": "dcd392aa",
    "metadata": {},
    "outputs": [
     {
@@ -113,284 +114,49 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0ff56093",
-   "metadata": {},
-   "source": [
-    "test list pop"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "4920122b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l = [1,2,34,5,56]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "a28a5eb1",
+   "execution_count": 37,
+   "id": "57051c50",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "56"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "This shirt's size is medium\n",
+      "met me\n"
+     ]
     }
    ],
    "source": [
-    "l.pop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "fa08516a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 34, 5]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "c1120e7e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l.clear()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "8447e243",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "cdc4a913",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l = [1,2,34,5,56,1,2,3,2,4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "cdb5540b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l.count(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "f2f9d6c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l2= ('a','b','c')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "cb1387d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l.extend(l2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "801f2185",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 34, 5, 56, 1, 2, 3, 2, 4, 'a', 'b', 'c']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "65138a0c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l.insert(2,'d')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "d341aaf2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 'd', 34, 5, 56, 1, 2, 3, 2, 4, 'a', 'b', 'c']"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "08bca722",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'d'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l.pop(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "67a0a292",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 34, 5, 56, 1, 2, 3, 2, 4, 'a', 'b', 'c']"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "38110a4f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l.reverse()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "a5748b2b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['c', 'b', 'a', 4, 2, 3, 2, 1, 56, 5, 34, 2, 1]"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l"
+    "make_shirt('medium',text='met me')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9de3fd39",
+   "id": "5fceaf8e",
    "metadata": {},
    "source": [
-    "# 2. Functions with infinite arguments"
+    "#### two types of arguments: positional and keyword arguments\n",
+    "\n",
+    "- positional: just write\n",
+    "- kwargs: need to specify, e.g. `text = 'met me'`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5a65b22",
+   "metadata": {},
+   "source": [
+    "## a. Functions with infinite arguments\n",
+    "- *A, then A is a tuple inside the function"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "a496ad88",
+   "id": "65edd11d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "ad1d64ee",
+   "id": "19bcb598",
    "metadata": {},
    "outputs": [
     {
@@ -422,9 +188,531 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e90c8592",
+   "metadata": {},
+   "source": [
+    "## b. Functions with infinite kwargs:\n",
+    "- **A, then A is a dictionary inside the function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "6bba5d61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_car(manufacture, model_name,**others):\n",
+    "    info = dict()\n",
+    "    info['manufacture']=manufacture\n",
+    "    info['model name']= model_name\n",
+    "    for key,value in others.items():\n",
+    "        info[key] = value\n",
+    "    return info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "ad4d6f8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'manufacture': 'subaru',\n",
+       " 'model name': 'outback',\n",
+       " 'color': 'blue',\n",
+       " 'tow_package': True}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "make_car('subaru', 'outback', color='blue', tow_package=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f79fc5d3",
+   "metadata": {},
+   "source": [
+    "## c. Order of functions when calling\n",
+    "- we don't need oder! Interesting\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "1b6966f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f1(x):\n",
+    "    return x+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "775b922c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f2(x):\n",
+    "    return f1(x)*2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "545a5d3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f2(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1183cc48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f3(x):\n",
+    "    return f4(x)-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9b9395aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f4(x):\n",
+    "    return x**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8cbb9ef7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f3(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22418239",
+   "metadata": {},
+   "source": [
+    "# 2. Classes\n",
+    "- `self` is just a variable, we can use other name for it\n",
+    "- `self.name1` is also a variable, we can change name to e.g. `self.myname` or `self.name` and then in \n",
+    "`__init__` first line becomes `self.myname = name`. Later to get the attributes, we muss call\n",
+    "`self.name1`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "fcdd0d31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog():\n",
+    "    \"\"\"A simple attempt to model a dog.\"\"\" \n",
+    "    \n",
+    " \n",
+    "    def __init__(self, name, age): # later we just need to pass in `name` and `age` - like the arguments in functions\n",
+    "        \"\"\"Initialize name and age attributes.\"\"\"\n",
+    "        self.name1 = name\n",
+    "        self.age1 = age\n",
+    "    \n",
+    " \n",
+    "    def sit(self):\n",
+    "        \"\"\"Simulate a dog sitting in response to a command.\"\"\"\n",
+    "        print(self.name1.title() + \" is now sitting.\")\n",
+    "    \n",
+    "    \n",
+    "    def roll_over(self):\n",
+    "        \"\"\"Simulate rolling over in response to a command.\"\"\"\n",
+    "        print(self.name1.title() + \" rolled over!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "31828358",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=Dog('abcde',15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "32d55390",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Abcde is now sitting.\n"
+     ]
+    }
+   ],
+   "source": [
+    "a.sit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "d05f0935",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Abcde rolled over!\n"
+     ]
+    }
+   ],
+   "source": [
+    "a.roll_over()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "2d92845a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'abcde'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.name1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "a4058467",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.age1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32ac7def",
+   "metadata": {},
+   "source": [
+    "## 2a. Adding an attribute without declaration as parameter\n",
+    "- by giving it a default value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "6a1a2f55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car():\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.ku = 10\n",
+    "    \n",
+    "    #def itsku(x):\n",
+    "        #return x.ku * 2\n",
+    "        \n",
+    "    # for more readable\n",
+    "    def itsku(self):\n",
+    "        return self.ku *2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "fd8ad8b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Car at 0x251c4835fa0>"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a= Car(15,12)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "77431d6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.ku"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "a9286b95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.itsku()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4c22898",
+   "metadata": {},
+   "source": [
+    "## 2b. Inheritance\n",
+    "- add name of parent class in parentheses\n",
+    "- use `super().__init__(...only variables in parent class, without self...)`\n",
+    "- all functions and attributes are inherited, **including the hidding attributes**, which are not present as parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "4ce13929",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car():\n",
+    "    def __init__(self,name,model):\n",
+    "        self.name = name\n",
+    "        self.model = model\n",
+    "        self.length = 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "252ed60a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Electric_car(Car):\n",
+    "    def __init__(self,name,model):\n",
+    "        super().__init__(name,model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "a2d0bf06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Car at 0x251c486af40>"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = Car('BMW', 'A21')\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "2172df26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BMW\n",
+      "A21\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.name)\n",
+    "print(a.model)\n",
+    "print(a.length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "72a1544a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Electric_car at 0x251c48ab100>"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = Electric_car('Audi', 'B123')\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "7903f9ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Audi\n",
+      "B123\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b.name)\n",
+    "print(b.model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "8c77f9bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# b has also attribute `length`\n",
+    "b.length"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e926a7f",
+   "metadata": {},
+   "source": [
+    "- question: how to add child class's own attribute? ---> use attribute with default value, very simple!\n",
+    "- if in the child class there is a function of the same name as in the parent class, then when we call an object from the child class, this function is override with priority on the child class, i.e forget this function on parent class.\n",
+    "- we can add an attribute as an object from other class. This object is then an attribute of the current class:\n",
+    "`self.new_attribute = OtherClass(...some variables...)`\n",
+    "- unlike functions, in Classes, if we need references from a specific class, this class must be predefined."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de2efb84",
+   "id": "90f6d02c",
    "metadata": {},
    "outputs": [],
    "source": []
