--- a/Python/my_numpy.ipynb
+++ b/Python/my_numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2628,6 +2628,87 @@
    "source": [
     "np.where(x>3,1,0\n",
     "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.2 Onearray.astype(np.int64)\n",
+    "used to turn True, False into 0,1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 2, 3, 2],\n",
+       "       [4, 4, 3, 2],\n",
+       "       [4, 4, 4, 1],\n",
+       "       [4, 2, 2, 4],\n",
+       "       [2, 4, 2, 3]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x= np.random.randint(1,5,20).reshape(5,4)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False,  True, False,  True],\n",
+       "       [False, False, False,  True],\n",
+       "       [False, False, False, False],\n",
+       "       [False,  True,  True, False],\n",
+       "       [ True, False,  True, False]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x==2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 0, 1],\n",
+       "       [0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0],\n",
+       "       [0, 1, 1, 0],\n",
+       "       [1, 0, 1, 0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(x==2).astype(np.int64)"
    ]
   },
   {
