--- a/Machine Learning/svm.ipynb
+++ b/Machine Learning/svm.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "017f231b",
+   "id": "14a7307f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2336713d",
+   "id": "4ec154de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8a1d2ecb",
+   "id": "bba1d42e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "96ff1986",
+   "id": "7e8fd4ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b2e3430",
+   "id": "dabd50dd",
    "metadata": {},
    "source": [
     "### What iris is?"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7dbf5808",
+   "id": "39857540",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f573d55e",
+   "id": "28f84581",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "01ee072a",
+   "id": "299d0603",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8b971f28",
+   "id": "aa5b529e",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1fd574da",
+   "id": "b7d5f360",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7b21a86f",
+   "id": "b59b360b",
    "metadata": {},
    "outputs": [
     {
@@ -389,13 +389,368 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "42848078",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.4, 0.2],\n",
+       "       [1.4, 0.2],\n",
+       "       [1.3, 0.2],\n",
+       "       [1.5, 0.2],\n",
+       "       [1.4, 0.2],\n",
+       "       [1.7, 0.4],\n",
+       "       [1.4, 0.3],\n",
+       "       [1.5, 0.2],\n",
+       "       [1.4, 0.2],\n",
+       "       [1.5, 0.1],\n",
+       "       [1.5, 0.2],\n",
+       "       [1.6, 0.2],\n",
+       "       [1.4, 0.1],\n",
+       "       [1.1, 0.1],\n",
+       "       [1.2, 0.2],\n",
+       "       [1.5, 0.4],\n",
+       "       [1.3, 0.4],\n",
+       "       [1.4, 0.3],\n",
+       "       [1.7, 0.3],\n",
+       "       [1.5, 0.3],\n",
+       "       [1.7, 0.2],\n",
+       "       [1.5, 0.4],\n",
+       "       [1. , 0.2],\n",
+       "       [1.7, 0.5],\n",
+       "       [1.9, 0.2],\n",
+       "       [1.6, 0.2],\n",
+       "       [1.6, 0.4],\n",
+       "       [1.5, 0.2],\n",
+       "       [1.4, 0.2],\n",
+       "       [1.6, 0.2],\n",
+       "       [1.6, 0.2],\n",
+       "       [1.5, 0.4],\n",
+       "       [1.5, 0.1],\n",
+       "       [1.4, 0.2],\n",
+       "       [1.5, 0.2],\n",
+       "       [1.2, 0.2],\n",
+       "       [1.3, 0.2],\n",
+       "       [1.4, 0.1],\n",
+       "       [1.3, 0.2],\n",
+       "       [1.5, 0.2],\n",
+       "       [1.3, 0.3],\n",
+       "       [1.3, 0.3],\n",
+       "       [1.3, 0.2],\n",
+       "       [1.6, 0.6],\n",
+       "       [1.9, 0.4],\n",
+       "       [1.4, 0.3],\n",
+       "       [1.6, 0.2],\n",
+       "       [1.4, 0.2],\n",
+       "       [1.5, 0.2],\n",
+       "       [1.4, 0.2],\n",
+       "       [4.7, 1.4],\n",
+       "       [4.5, 1.5],\n",
+       "       [4.9, 1.5],\n",
+       "       [4. , 1.3],\n",
+       "       [4.6, 1.5],\n",
+       "       [4.5, 1.3],\n",
+       "       [4.7, 1.6],\n",
+       "       [3.3, 1. ],\n",
+       "       [4.6, 1.3],\n",
+       "       [3.9, 1.4],\n",
+       "       [3.5, 1. ],\n",
+       "       [4.2, 1.5],\n",
+       "       [4. , 1. ],\n",
+       "       [4.7, 1.4],\n",
+       "       [3.6, 1.3],\n",
+       "       [4.4, 1.4],\n",
+       "       [4.5, 1.5],\n",
+       "       [4.1, 1. ],\n",
+       "       [4.5, 1.5],\n",
+       "       [3.9, 1.1],\n",
+       "       [4.8, 1.8],\n",
+       "       [4. , 1.3],\n",
+       "       [4.9, 1.5],\n",
+       "       [4.7, 1.2],\n",
+       "       [4.3, 1.3],\n",
+       "       [4.4, 1.4],\n",
+       "       [4.8, 1.4],\n",
+       "       [5. , 1.7],\n",
+       "       [4.5, 1.5],\n",
+       "       [3.5, 1. ],\n",
+       "       [3.8, 1.1],\n",
+       "       [3.7, 1. ],\n",
+       "       [3.9, 1.2],\n",
+       "       [5.1, 1.6],\n",
+       "       [4.5, 1.5],\n",
+       "       [4.5, 1.6],\n",
+       "       [4.7, 1.5],\n",
+       "       [4.4, 1.3],\n",
+       "       [4.1, 1.3],\n",
+       "       [4. , 1.3],\n",
+       "       [4.4, 1.2],\n",
+       "       [4.6, 1.4],\n",
+       "       [4. , 1.2],\n",
+       "       [3.3, 1. ],\n",
+       "       [4.2, 1.3],\n",
+       "       [4.2, 1.2],\n",
+       "       [4.2, 1.3],\n",
+       "       [4.3, 1.3],\n",
+       "       [3. , 1.1],\n",
+       "       [4.1, 1.3],\n",
+       "       [6. , 2.5],\n",
+       "       [5.1, 1.9],\n",
+       "       [5.9, 2.1],\n",
+       "       [5.6, 1.8],\n",
+       "       [5.8, 2.2],\n",
+       "       [6.6, 2.1],\n",
+       "       [4.5, 1.7],\n",
+       "       [6.3, 1.8],\n",
+       "       [5.8, 1.8],\n",
+       "       [6.1, 2.5],\n",
+       "       [5.1, 2. ],\n",
+       "       [5.3, 1.9],\n",
+       "       [5.5, 2.1],\n",
+       "       [5. , 2. ],\n",
+       "       [5.1, 2.4],\n",
+       "       [5.3, 2.3],\n",
+       "       [5.5, 1.8],\n",
+       "       [6.7, 2.2],\n",
+       "       [6.9, 2.3],\n",
+       "       [5. , 1.5],\n",
+       "       [5.7, 2.3],\n",
+       "       [4.9, 2. ],\n",
+       "       [6.7, 2. ],\n",
+       "       [4.9, 1.8],\n",
+       "       [5.7, 2.1],\n",
+       "       [6. , 1.8],\n",
+       "       [4.8, 1.8],\n",
+       "       [4.9, 1.8],\n",
+       "       [5.6, 2.1],\n",
+       "       [5.8, 1.6],\n",
+       "       [6.1, 1.9],\n",
+       "       [6.4, 2. ],\n",
+       "       [5.6, 2.2],\n",
+       "       [5.1, 1.5],\n",
+       "       [5.6, 1.4],\n",
+       "       [6.1, 2.3],\n",
+       "       [5.6, 2.4],\n",
+       "       [5.5, 1.8],\n",
+       "       [4.8, 1.8],\n",
+       "       [5.4, 2.1],\n",
+       "       [5.6, 2.4],\n",
+       "       [5.1, 2.3],\n",
+       "       [5.1, 1.9],\n",
+       "       [5.9, 2.3],\n",
+       "       [5.7, 2.5],\n",
+       "       [5.2, 2.3],\n",
+       "       [5. , 1.9],\n",
+       "       [5.2, 2. ],\n",
+       "       [5.4, 2.3],\n",
+       "       [5.1, 1.8]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = iris['data'][:,(2,3)]\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fe6de23e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris['target']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8ce9717c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2de8e956",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris['target_names']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f313e793",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris['target']==2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "18432aa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112,\n",
+       "        113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125,\n",
+       "        126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138,\n",
+       "        139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149], dtype=int64),)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(iris['target']==2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "fcecf8a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(iris[\"target\"] == 2).astype(np.float64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c678be3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], dtype=int64)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(iris['target']==2).astype(np.int64)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5c0c4168",
+   "id": "8303f25c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "X = iris['data'][:,]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
